--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="main">
+        <div id="vista" class="vista"></div>
+        <div class="teclado">
+            <button id="c" class="c">C</button>
+            <button id="parentesis" class="parentesis">()</button>
+            <button id="porcentaje" class="porcentaje">%</button>
+            <button id="division" class="division">÷</button>
+            <br>
+            <button id="7" class="7">7</button>
+            <button id="8" class="8">8</button>
+            <button id="9" class="9">9</button>
+            <button id="X" class="X">X</button>
+            <br>
+            <button id="4" class="4">4</button>
+            <button id="5" class="5">5</button>
+            <button id="6" class="6">6</button>
+            <button id="menos" class="menos">-</button>
+            <br>
+            <button id="1" class="1">1</button>
+            <button id="2" class="2">2</button>
+            <button id="3" class="3">3</button>
+            <button id="+" class="+">+</button>
+            <br>
+            <button id="masmenos" class="masmenos">+/-</button>
+            <button id="0" class="0">0</button>
+            <button id="punto" class="punto">.</button>
+            <button id="igual" class="igual">=</button>
+        </div>
+    </div>
 </body>
 </html>
