--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button id="7" class="7">7</button>
             <button id="8" class="8">8</button>
             <button id="9" class="9">9</button>
-            <button id="X" class="X">X</button>
+            <button id="multiplicacion" class="multiplicacion">X</button>
             <br>
             <button id="4" class="4">4</button>
             <button id="5" class="5">5</button>
@@ -29,7 +29,7 @@
             <button id="1" class="1">1</button>
             <button id="2" class="2">2</button>
             <button id="3" class="3">3</button>
-            <button id="+" class="+">+</button>
+            <button id="suma" class="suma">+</button>
             <br>
             <button id="masmenos" class="masmenos">+/-</button>
             <button id="0" class="0">0</button>
