--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button id="7" class="7">7</button>
             <button id="8" class="8">8</button>
             <button id="9" class="9">9</button>
-            <button id="multiplicacion" class="multiplicacion">X</button>
+            <button id="multiplicacion" class="multiplicacion">x</button>
             <br>
             <button id="4" class="4">4</button>
             <button id="5" class="5">5</button>
