Add write numbers to vista

--- a/index.html
+++ b/index.html
@@ -1,53 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="main">
-        <div id="vista" class="vista">
-        </div>
-        <div class="teclado">
-            <button id="seno" class="seno">sen</button>
-            <button id="coseno" class="coseno">cos</button>
-            <button id="tangente" class="tangente">tan</button>
-            <button id="pi" class="pi">π</button>
-            <button id="exponencial" class="exponencial">e</button>
-            <br>
-            <button id="raiz" class="raiz">√</button>
-            <button id="potencia" class="potencia">^</button>
-            <button id="porcentaje" class="porcentaje">%</button>
-            <button id="parentesis-izquierdo" class="parentesis-izquierdo">(</button>
-            <button id="parentesis-derecho" class="parentesis-derecho">)</button>
-            <br>
-            <button id="7" class="7">7</button>
-            <button id="8" class="8">8</button>
-            <button id="9" class="9">9</button>
-            <button id="c" class="c">C</button>
-            <button id="ce" class="ce">CE</button>
-            <br>
-            <button id="4" class="4">4</button>
-            <button id="5" class="5">5</button>
-            <button id="6" class="6">6</button>
-            <button id="multiplicacion" class="multiplicacion">x</button>
-            <button id="division" class="division">÷</button>
-            <br>
-            <button id="1" class="1">1</button>
-            <button id="2" class="2">2</button>
-            <button id="3" class="3">3</button>
-            <button id="suma" class="suma">+</button>
-            <button id="menos" class="menos">-</button>
-            <br>
-            <button id="masmenos" class="masmenos">+/-</button>
-            <button id="0" class="0">0</button>
-            <button id="punto" class="punto">.</button>
-            <button id="mod" class="mod">mod</button>
-            <button id="igual" class="igual">=</button>
-        </div>
+      <div id="vista" class="vista"></div>
+      <div class="teclado">
+        <button id="seno" class="seno">sen</button>
+        <button id="coseno" class="coseno">cos</button>
+        <button id="tangente" class="tangente">tan</button>
+        <button id="pi" class="pi">π</button>
+        <button id="exponencial" class="exponencial">e</button>
+        <br />
+        <button id="raiz" class="raiz">√</button>
+        <button id="potencia" class="potencia">^</button>
+        <button id="porcentaje" class="porcentaje">%</button>
+        <button id="parentesis-izquierdo" class="parentesis-izquierdo">
+          (
+        </button>
+        <button id="parentesis-derecho" class="parentesis-derecho">)</button>
+        <br />
+        <button id="7" class="7">7</button>
+        <button id="8" class="8">8</button>
+        <button id="9" class="9">9</button>
+        <button id="c" class="c">C</button>
+        <button id="ce" class="ce">CE</button>
+        <br />
+        <button id="4" class="4">4</button>
+        <button id="5" class="5">5</button>
+        <button id="6" class="6">6</button>
+        <button id="multiplicacion" class="multiplicacion">x</button>
+        <button id="division" class="division">÷</button>
+        <br />
+        <button id="1" class="1">1</button>
+        <button id="2" class="2">2</button>
+        <button id="3" class="3">3</button>
+        <button id="suma" class="suma">+</button>
+        <button id="menos" class="menos">-</button>
+        <br />
+        <button id="masmenos" class="masmenos">+/-</button>
+        <button id="0" class="0">0</button>
+        <button id="punto" class="punto">.</button>
+        <button id="mod" class="mod">mod</button>
+        <button id="igual" class="igual">=</button>
+      </div>
     </div>
-</body>
+    <script src="logica.js"></script>
+  </body>
 </html>
