Add button for show number

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div class="main">
-      <div id="vista" class="vista"></div>
+      <div id="vista" class="vista">
+          <button class="muestra" id="muestra"></button>
+      </div>
       <div class="teclado">
         <button id="seno" class="seno">sen</button>
         <button id="coseno" class="coseno">cos</button>
